Change min java version to 17